完成用户注册并保存到数据库的功能

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,10 @@
-app:
-  name: "web_app"
-  mode: "debug"
-  port: 8081
+name: "bluebell"
+mode: "dev"
+port: 8080
+vroot: "v0.0.1"
+start_time: "2020-07-01"
+machine_id: 1
+
 log:
   level: "debug"
   filename: "web_app.log"
